--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
  MONGODB_URL=mongodb+srv://nsivasai88:vZQfnujJCtiXAQUV@cluster1.tnnn9qq.mongodb.net/usersdata
  JWT_PASSWORD ="MYpassWORD"
-#  PORT=2024
+PORT=2024
